Fix app name not visible on subpages (white on white)
The header name color override was using a non-existent
.subPageHeaderBackground class instead of .subPageBody.

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -199,7 +199,7 @@ nav > ul li a:active {
 
 
 // Sub Page Header Styling
-.subPageHeaderBackground .logo > .headerName {
+.subPageBody .logo > .headerName {
 	color: #000;
 }
 
